--- a/index.html
+++ b/index.html
@@ -602,6 +602,84 @@
                 height: 200px;
             }
         }
+
+        /* Tabela de Preços */
+        .pricing-table {
+            background: white;
+            border-radius: 15px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+            padding: 40px;
+            margin-top: 40px;
+            overflow-x: auto;
+        }
+
+        .pricing-table h2 {
+            color: var(--primary-color);
+            font-size: 2em;
+            margin-bottom: 30px;
+            text-align: center;
+        }
+
+        .pricing-table table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 0 auto;
+        }
+
+        .pricing-table th,
+        .pricing-table td {
+            padding: 15px 20px;
+            text-align: left;
+            border-bottom: 1px solid #eee;
+        }
+
+        .pricing-table th {
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            color: white;
+            font-weight: 600;
+            font-size: 1.1em;
+        }
+
+        .pricing-table tr:hover {
+            background: rgba(211, 47, 47, 0.05);
+        }
+
+        .pricing-table td:first-child {
+            font-weight: 600;
+            color: var(--primary-color);
+        }
+
+        .pricing-table .price {
+            font-size: 1.3em;
+            font-weight: 700;
+            color: var(--primary-color);
+        }
+
+        .pricing-table .note {
+            font-size: 0.9em;
+            color: #666;
+            font-style: italic;
+        }
+
+        @media (max-width: 768px) {
+            .pricing-table {
+                padding: 20px;
+            }
+
+            .pricing-table h2 {
+                font-size: 1.5em;
+            }
+
+            .pricing-table th,
+            .pricing-table td {
+                padding: 10px 12px;
+                font-size: 0.9em;
+            }
+
+            .pricing-table .price {
+                font-size: 1.1em;
+            }
+        }
     </style>
 </head>
 <body>
@@ -629,7 +707,7 @@
         <div class="container">
             <div class="nav-buttons">
                 <button class="nav-btn active" onclick="showSection('home')">Início</button>
-                <button class="nav-btn" onclick="showSection('camisas')">Camisas</button>
+                <button class="nav-btn" onclick="showSection('camisas')">Camisas Sublimadas</button>
                 <button class="nav-btn" onclick="showSection('camisas-dtf')">Camisas DTF</button>
                 <button class="nav-btn" onclick="showSection('canecas')">Canecas</button>
             </div>
@@ -648,7 +726,7 @@
 
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-top: 40px;">
                 <div style="background: white; padding: 40px; border-radius: 15px; box-shadow: 0 5px 20px rgba(0,0,0,0.1); text-align: center;">
-                    <h3 style="color: var(--primary-color); font-size: 2em; margin-bottom: 15px;">Camisas</h3>
+                    <h3 style="color: var(--primary-color); font-size: 2em; margin-bottom: 15px;">Camisas Sublimadas</h3>
                     <p style="color: #666; margin-bottom: 20px;">Estampas personalizadas de alta qualidade em qualquer tipo de camisa</p>
                     <button class="btn" onclick="showSection('camisas')">Ver Galeria</button>
                 </div>
@@ -663,10 +741,43 @@
                     <button class="btn" onclick="showSection('canecas')">Ver Galeria</button>
                 </div>
             </div>
+
+            <div class="pricing-table">
+                <h2>💰 Tabela de Preços</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Produto</th>
+                            <th>Preço Inicial</th>
+                            <th>Observações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Camisas Sublimadas</td>
+                            <td class="price">A partir de R$ 30,00</td>
+                            <td>Preço pode variar conforme quantidade e modelo</td>
+                        </tr>
+                        <tr>
+                            <td>Camisas DTF</td>
+                            <td class="price">A partir de R$ 40,00</td>
+                            <td class="note">Preço a ser consultado com a vendedora Ana Paula. Preço diferenciado para atacado.</td>
+                        </tr>
+                        <tr>
+                            <td>Canecas</td>
+                            <td class="price">A partir de R$ 30,00</td>
+                            <td>Preço pode variar conforme quantidade e modelo</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p style="text-align: center; margin-top: 20px; color: #666; font-size: 0.95em;">
+                    💬 Para orçamentos personalizados e pedidos em atacado, entre em contato com Ana Paula através do WhatsApp!
+                </p>
+            </div>
         </section>
 
         <section id="camisas" class="section">
-            <h2>Camisas Personalizadas</h2>
+            <h2>Camisas Sublimadas</h2>
             <div id="addCamisaBtnContainer" style="margin-bottom: 20px; display: none;">
                 <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                     <button class="btn" onclick="toggleAddForm('camisas')">Adicionar Nova Imagem</button>
@@ -686,7 +797,7 @@
                 </div>
             </div>
             <div id="addCamisaForm" class="add-image-form">
-                <h3 style="margin-bottom: 20px; color: var(--primary-color);">Adicionar Nova Camisa</h3>
+                <h3 style="margin-bottom: 20px; color: var(--primary-color);">Adicionar Nova Camisa Sublimada</h3>
                 <div class="form-group">
                     <label>Escolha uma opção:</label>
                     <select id="camisaImageType" onchange="toggleImageInput('camisas')">
@@ -955,7 +1066,9 @@
                     btn.classList.add('active');
                 } else if (btn.textContent.includes('Camisas DTF') && sectionId === 'camisas-dtf') {
                     btn.classList.add('active');
-                } else if (btn.textContent.includes('Camisas') && !btn.textContent.includes('DTF') && sectionId === 'camisas') {
+                } else if (btn.textContent.includes('Camisas Sublimadas') && sectionId === 'camisas') {
+                    btn.classList.add('active');
+                } else if (btn.textContent.includes('Camisas') && !btn.textContent.includes('DTF') && !btn.textContent.includes('Sublimadas') && sectionId === 'camisas') {
                     btn.classList.add('active');
                 } else if (btn.textContent.includes('Canecas') && sectionId === 'canecas') {
                     btn.classList.add('active');
@@ -2199,4 +2312,3 @@
     </script>
 </body>
 </html>
-
